Fixed grammar error, fixed unclosed p, added text align centre to h1 and sized down the images

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,16 @@
 html {
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
+}
+
+h1 {
+  text-align: center;
+}
+
+img {
+  width: 100px;
 }
